changed to my name

--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "landing-page-portfolio-community",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "parcel-bundler": "^1.6.1"
+  "dependencies": {},
+  "scripts": {
+    "dev": "diy-pwa dev",
+    "start": "diy-pwa dev"
   },
-  "scripts": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "diy-pwa": "latest"
+  }
 }
